--- a/src/examples/go_monorepo_workflows.yml
+++ b/src/examples/go_monorepo_workflows.yml
@@ -241,5 +241,5 @@ usage:
             <<: *cfg-isopod-version
             env: prod
             requires:
-              # note that this transitively filters for master!
+              # note that this transitively filters for main/master!
               - docker-prod
