--- a/src/commands/maven_restore_artifacts.yml
+++ b/src/commands/maven_restore_artifacts.yml
@@ -7,6 +7,10 @@ parameters:
     description: 'Prefix for the cache-key (used in combination with checksum of pom.xml); no-op with blank prefix'
     type: string
     default: ''
+  path:
+    description: 'Path of maven module for the app, or "." for single-app-repo'
+    type: string
+    default: '.'
 
 steps:
   - when:
@@ -14,5 +18,6 @@ steps:
       steps:
         - restore_cache:
             keys:
+              - << parameters.prefix >>-{{ checksum "pom.xml" }}-<< parameters.path >>
               - << parameters.prefix >>-{{ checksum "pom.xml" }}
               - << parameters.prefix >>-
