--- a/src/examples/java_monorepo_workflows.yml
+++ b/src/examples/java_monorepo_workflows.yml
@@ -118,11 +118,6 @@ usage:
               # note semantic of 'requires': on master this is ignored
               - approve_deploy_dev_branch
 
-        - compliance/sre_compliance_checks:
-            context: dev
-            requires:
-              - build-push-image
-
         - ric-orb/deploy_job:
             name: 'deploy-dev'
             context: dev
@@ -132,6 +127,10 @@ usage:
             env: 'dev'
             requires:
               - build-push-image
+        - compliance/sre_compliance_checks:
+            context: dev
+            requires:
+              - deploy-dev
 
         - ric-orb/deploy_job:
             name: 'deploy-prod'
@@ -191,11 +190,6 @@ usage:
               # note semantic of 'requires': on master this is ignored
               - approve_deploy_dev_branch
 
-        - compliance/sre_compliance_checks:
-            context: dev
-            requires:
-              - build-push-image
-
         - ric-orb/deploy_job:
             name: 'deploy-dev'
             context: dev
@@ -205,6 +199,10 @@ usage:
             env: 'dev'
             requires:
               - build-push-image
+        - compliance/sre_compliance_checks:
+            context: dev
+            requires:
+              - deploy-dev
 
         - ric-orb/deploy_job:
             name: 'deploy-prod'
