--- a/src/examples/go_monorepo_workflows.yml
+++ b/src/examples/go_monorepo_workflows.yml
@@ -129,11 +129,6 @@ usage:
               # note semantic of 'requires': on master this is ignored
               - request_deploy_dev
 
-        - compliance/sre_compliance_checks:
-            context: dev
-            requires:
-              - build-push-image
-
         - ric-orb/deploy_job:
             name: 'deploy-dev'
             context: dev
@@ -142,6 +137,10 @@ usage:
             env: dev
             requires:
               - build-push-image
+        - compliance/sre_compliance_checks:
+            context: dev
+            requires:
+              - deploy-dev
 
         - ric-orb/deploy_job:
             name: 'deploy-prod'
@@ -206,11 +205,6 @@ usage:
               # note semantic of 'requires': on master this is ignored
               - request-deploy
 
-        - compliance/sre_compliance_checks:
-            context: dev
-            requires:
-              - build-push-image-dev
-
         - ric-orb/deploy_job:
             name: 'deploy-dev'
             context: dev
@@ -219,6 +213,10 @@ usage:
             env: dev
             requires:
               - build-push-image-dev
+        - compliance/sre_compliance_checks:
+            context: dev
+            requires:
+              - deploy-dev
 
         # jobs to build and deploy PROD image
         - ric-orb/build_push_image:
