--- a/src/jobs/maven_deploy_artifact.yml
+++ b/src/jobs/maven_deploy_artifact.yml
@@ -29,10 +29,12 @@ steps:
   - maven_auth
   - maven_restore_artifacts:
       prefix: << parameters.cache_key_prefix >>
+      pom_file: << parameters.pom_file >>
       path: << parameters.path >>
   - maven_deploy_artifact:
       path: << parameters.path >>
       pom_file: << parameters.pom_file >>
   - maven_cache_artifacts:
       prefix: << parameters.cache_key_prefix >>
+      pom_file: << parameters.pom_file >>
       path: << parameters.path >>
