--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -18,7 +18,7 @@ usage:
     ric-orb: ricardo/ric-orb@3
 
   cfg-isopod-version: &cfg-isopod-version
-    isopod_version: '0.29.4'
+    isopod_version: 0.29.6
   cfg-cache-key-prefix: &cfg-cache-key-prefix
     # FIXME: replace value with your actual repo name
     cache_key_prefix: my-repo
