allows to have different isopod config files for a single app - this is typically useful for apps with specific builds for primary/secondary, e.g. solr

--- a/src/examples/go_monorepo_workflows.yml
+++ b/src/examples/go_monorepo_workflows.yml
@@ -204,7 +204,7 @@ usage:
               # FIXME: replace suffix with your actual app name
               - *build-test-worker
               # note semantic of 'requires': on master this is ignored
-              - request-deploy
+              - request_deploy_dev
 
         - compliance/sre_compliance_checks:
             context: dev
