--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -37,7 +37,7 @@ usage:
             executor: maven_docker
 #            executor: maven_vm
 
-        - approve_deploy_dev_branch:
+        - approve_deploy_dev:
             type: approval
             filters:
               branches:
@@ -52,7 +52,7 @@ usage:
             requires:
               - maven-build-test
               # note semantic of 'requires': on master this is ignored
-              - approve_deploy_dev_branch
+              - approve_deploy_dev
 
         - compliance/sre_compliance_checks:
             context: dev
