add slack integration to java and go examples

--- a/src/examples/go_monorepo_workflows.yml
+++ b/src/examples/go_monorepo_workflows.yml
@@ -149,6 +149,11 @@ usage:
             work_dir: *cfg-work-dir-api
             <<: *cfg-isopod-version
             env: prod
+            slack_notify_success: true
+            slack_notify_failure: true
+            # FIXME: replace value with your actual main/master branch name; 'master' is default and is not needed for the slack webhook configuration to work
+            #slack_ok_branches: 'main'
+            #slack_fail_branches: 'main'
             filters:
               branches:
                 only:
@@ -240,6 +245,11 @@ usage:
             work_dir: *cfg-work-dir-worker
             <<: *cfg-isopod-version
             env: prod
+            slack_notify_success: true
+            slack_notify_failure: true
+            # FIXME: replace value with your actual main/master branch name; 'master' is default and is not needed for the slack webhook configuration to work
+            #slack_ok_branches: 'main'
+            #slack_fail_branches: 'main'
             requires:
               # note that this transitively filters for main/master!
               - build-push-image-prod
