--- a/src/examples/go_singlerepo.yml
+++ b/src/examples/go_singlerepo.yml
@@ -72,6 +72,11 @@ usage:
             context: prod
             <<: *cfg-isopod-version
             env: prod
+            slack_notify_success: true
+            slack_notify_failure: true
+            # FIXME: replace value with your actual main/master branch name; 'master' is default and is not needed for the slack webhook configuration to work
+            #slack_ok_branches: 'main'
+            #slack_fail_branches: 'main'
             filters:
               branches:
                 only:
