--- a/src/commands/build_push.yml
+++ b/src/commands/build_push.yml
@@ -1,5 +1,5 @@
 description: >
-  (TODO: should be called isopod_build, but that would be a breaking change)
+  (TODO: should be called isopod_build_push, but that would be a breaking change)
   Build the docker image with isopod.
 
 parameters:
