[semver:minor] add docker_build_push job (#42)
* comment bad names
* add slack integration to java and go examples
* add docker build push job & command

--- a/src/commands/build_push.yml
+++ b/src/commands/build_push.yml
@@ -1,4 +1,5 @@
 description: >
+  (TODO: should be called isopod_build_push, but that would be a breaking change)
   Build the docker image with isopod.
 
 parameters:
