--- a/src/examples/java_singleapprepo.yml
+++ b/src/examples/java_singleapprepo.yml
@@ -15,7 +15,7 @@ usage:
 
   orbs:
     compliance: ricardo/compliance-orb@2
-    ric-orb: ricardo/ric-orb@4
+    ric-orb: ricardo/ric-orb@5
 
   cfg-isopod-version: &cfg-isopod-version
     isopod_version: 0.29.6
@@ -34,8 +34,8 @@ usage:
             name: 'maven-build-test'
             context: dev
             <<: *cfg-cache-key-prefix
-            executor: maven_docker
-#            executor: maven_vm
+            executor: ric-orb/maven_docker
+#            executor: ric-orb/maven_vm
 
         - approve_deploy_dev:
             type: approval
