--- a/src/executors/maven_docker.yml
+++ b/src/executors/maven_docker.yml
@@ -1,15 +1,8 @@
 description: >
   Docker executor with JDK 11 to build java applications.
 
-parameters:
-  tag:
-    default: '11.0'
-    description: >
-      Pick a specific cimg/openjdk image version
-    type: string
-
 docker:
-  - image: 'cimg/openjdk:<< parameters.tag >>'
+  - image: 'cimg/openjdk:11.0'
     auth:
       username: $DOCKER_HUB_USERNAME
       password: $DOCKER_HUB_PASSWORD
