--- a/src/jobs/maven_build_test.yml
+++ b/src/jobs/maven_build_test.yml
@@ -12,11 +12,13 @@ parameters:
     type: string
     default: ''
   executor:
-    description: 'Executor for the build (Either use existing ones: maven_docker, maven_vm or define your own)'
-    type: executor
+    description: 'Executor for the build (java_builder_docker is more lightweight, but some tests leveraging testcontainers etc require the java_builder_vm)'
+    type: enum
+    enum: [ 'maven_docker', 'maven_vm' ]
     default: 'maven_docker'
 
-executor: << parameters.executor >>
+executor:
+  name: << parameters.executor >>
 
 steps:
   - checkout
